Add scaler yaml

--- a/kubernetes/converter-deployment.yaml
+++ b/kubernetes/converter-deployment.yaml
@@ -15,6 +15,11 @@ spec:
       containers:
       - name: converter
         image: ghcr.io/kissge83/converter:latest
+        resources:
+          requests:
+            cpu: 100m
+          limits:
+            cpu: 500m
         ports:
         - containerPort: 8080
         livenessProbe:
