--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,12 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.9-slim
+FROM python:3.12-slim
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . .
+COPY converter.py /app/
+COPY ./templates/index.html /app/templates/
 
-# Install the necessary Python packages
 RUN pip install flask
 
-# Make port 8080 available to the world outside this container
 EXPOSE 8080
 
-# Define environment variable
-
-# Run app.py when the container launches
 CMD ["python", "converter.py"]
